--- a/login.css
+++ b/login.css
@@ -13,5 +13,16 @@ body {
 .login {
 
     text-align: center;
+    background-color: rgba(255, 255, 255, 0.3);
+    width: 40%;
+    height: 300px;
+    border-radius: 25px;
+    border: 1.75px solid rgba(255, 255, 255);
 
+
+}
+
+.login h1, form {
+
+    margin-top: 60px;
 }
