--- a/login.css
+++ b/login.css
@@ -1,5 +1,6 @@
 body {
 
+    font-family: 'Poppins', sans-serif;
     background-image: url('assets/login_bg.png');
     background-position: center;
     background-repeat: no-repeat;
@@ -8,21 +9,32 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+
 }
 
 .login {
-
+    color: rgb(175, 150, 106);
     text-align: center;
     background-color: rgba(255, 255, 255, 0.3);
     width: 40%;
-    height: 300px;
+    height: 400px;
     border-radius: 25px;
-    border: 1.75px solid rgba(255, 255, 255);
-
-
+    border: 1px solid rgba(255, 255, 255);
+    backdrop-filter: blur(5px);
+    padding: 20px;
+    flex-direction: column;
+    justify-content: center;
 }
 
-.login h1, form {
+.login h1 {
+    margin-top: 30px;
+}
 
-    margin-top: 60px;
+.login input,
+.login button {
+    border-radius: 10px;
+    margin-top: 25px;
+    margin-bottom: 20px;
+    width: 60%;
+    height: 40px;
 }
