--- a/login.css
+++ b/login.css
@@ -1,7 +1,7 @@
 body {
 
     font-family: 'Poppins', sans-serif;
-    background-image: url('assets/login_bg.png');
+    background-image: url('assets/background.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -13,13 +13,12 @@ body {
 }
 
 .login {
-    color: rgb(175, 150, 106);
+    color: #af966a;
     text-align: center;
     background-color: rgba(255, 255, 255, 0.3);
     width: 40%;
     height: 400px;
     border-radius: 25px;
-    border: 1px solid rgba(255, 255, 255);
     backdrop-filter: blur(5px);
     padding: 20px;
     flex-direction: column;
@@ -37,4 +36,12 @@ body {
     margin-bottom: 20px;
     width: 60%;
     height: 40px;
+    background-color: rgba(255, 255, 255, 0.7);
+    border: white;
+}
+
+.login button {
+
+    background-color: #ccbb9f;
+    color: white;
 }
