--- a/login.css
+++ b/login.css
@@ -1,47 +1,106 @@
-body {
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: Raleway, sans-serif;
+}
 
-    font-family: 'Poppins', sans-serif;
-    background-image: url('assets/background.png');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 90vh;
+.raleway-m {
+    font-family: "Raleway", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 900;
+    font-style: normal;
+  }
+
+.entire {
+    height: 100vh;
     display: flex;
-    align-items: center;
-    justify-content: center;
-
-}
-
-.login {
-    color: #af966a;
-    text-align: center;
-    background-color: rgba(255, 255, 255, 0.3);
-    width: 40%;
-    height: 400px;
-    border-radius: 25px;
-    backdrop-filter: blur(5px);
-    padding: 20px;
+    background: url(login_bg-01-01-01.jpg);
+    background-position: center;
+    background-size: cover;
     flex-direction: column;
-    justify-content: center;
 }
 
-.login h1 {
-    margin-top: 30px;
+.navbar {
+    background: #278161;
+    display: flex;
+    height: 50px;
+    align-items: center;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
 }
 
-.login input,
-.login button {
-    border-radius: 10px;
-    margin-top: 25px;
-    margin-bottom: 20px;
-    width: 60%;
-    height: 40px;
-    background-color: rgba(255, 255, 255, 0.7);
-    border: white;
+.navbar ul {
+    list-style: none;
+    display: flex;
 }
 
-.login button {
+.navbar ul li {
+    padding-right: 20px;
+}
 
-    background-color: #ccbb9f;
+.navbar ul li a {
     color: white;
+    font-weight:400;
+    text-decoration: none;
+    display: block;
+    justify-content: center;
+    align-items: center;
+}
+
+.page {
+    flex: 1;
+    display: flex;
+    height: 100vh;
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+}
+
+.box {
+    display: flex;
+    width: 80%; 
+}
+
+.left {
+    flex: 1; 
+}
+
+.right {
+    flex: 0 1 auto;  
+    display: flex;
+    flex-direction: column;
+    justify-content: center;  
+    align-items: flex-end; 
+    max-width: 400px;  
+    margin-right: 60px;
+}
+
+.right .text h2 {
+    text-align: center; 
+    margin-bottom: 100px;
+    font-size: 2em;
+    font-weight: 800;
+    color:#278161;
+}
+
+.right form {
+    display: flex;
+    flex-direction: column;
+}
+
+.right form .input-group {
+    margin-bottom: 20px;
+}
+
+input {
+    background: transparent;
+    border: none;
+    border-bottom: 2px solid rgba(128, 128, 128, 0.5);
+    padding: 10px;
+    padding-bottom: 6px;
+}
+
+input:hover {
+    border-bottom: 2px solid rgba(39, 129, 97, 1);
+    transition: border-bottom 0.2s;
 }
