--- a/login.css
+++ b/login.css
@@ -15,7 +15,7 @@
 .entire {
     height: 100vh;
     display: flex;
-    background: url(assets/wrap-01.jpg);
+    background: url(login_bg-01-01-01.jpg);
     background-position: center;
     background-size: cover;
     flex-direction: column;
@@ -111,4 +111,5 @@ input:focus {
     transition: background 0.2s;
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
+    border-bottom: 2px solid rgba(39, 129, 97, 1);
 }
