--- a/login.css
+++ b/login.css
@@ -113,3 +113,24 @@ input:focus {
     border-top-right-radius: 2px;
     border-bottom: 2px solid rgba(39, 129, 97, 1);
 }
+
+button {
+    background:transparent;
+    border: 2px solid #278161;
+    color: #278161;
+    font-weight: 500;
+    padding: 10px;
+    border-radius: 50px;
+    cursor: pointer;
+    letter-spacing: 0.6 px;
+    margin-top: 10px;
+}
+
+button:hover {
+    margin-top: 10px;
+    background: rgba(39, 129, 97, 1);
+    border: 2px solid transparent;
+    color: white;
+    transition: background 0.2s;
+
+}
