--- a/login.css
+++ b/login.css
@@ -32,6 +32,8 @@
 .navbar ul {
     list-style: none;
     display: flex;
+    padding: 20px;
+    
 }
 
 .navbar ul li {
@@ -76,6 +78,7 @@
 }
 
 .right .text h2 {
+    margin-right: 70px;
     text-align: center; 
     margin-bottom: 100px;
     font-size: 2em;
@@ -90,14 +93,18 @@
 
 .right form .input-group {
     margin-bottom: 20px;
+    margin-left: 0px;
 }
 
 input {
+    margin-right: 100px;
     background: transparent;
     border: none;
     border-bottom: 2px solid rgba(128, 128, 128, 0.5);
     padding: 10px;
     padding-bottom: 6px;
+    width: 100%;
+    max-width: 290px;
 }
 
 input:hover {
@@ -114,7 +121,7 @@ input:focus {
     border-bottom: 2px solid rgba(39, 129, 97, 1);
 }
 
-button {
+.login-button {
     background:transparent;
     border: 2px solid #278161;
     color: #278161;
@@ -124,13 +131,45 @@ button {
     cursor: pointer;
     letter-spacing: 0.6 px;
     margin-top: 10px;
+    max-width: 100%;
+    width: 300px;
 }
 
-button:hover {
+.login-button:hover {
     margin-top: 10px;
     background: rgba(39, 129, 97, 1);
     border: 2px solid transparent;
     color: white;
     transition: background 0.2s;
 
+}   
+
+.register-box {
+    padding: 20px;
+    font-size: 12.5px;
+    margin-right: 25px;
+}
+
+.register-button {
+    font-size: 12.5px;
+    background: transparent;
+    color: #278161;
+    border: none;
+    cursor: pointer;
+    position: relative;
+}
+
+.register-button::after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 1px;
+    bottom: 0;
+    left: 0;
+    background-color: #278161;
+    transition: width 0.35s;
+}
+
+.register-button:hover::after {
+    width: 100%;
 }
