--- a/home.css
+++ b/home.css
@@ -111,7 +111,7 @@
 }
 
 
-.box {
+/* .box {
     display: flex;
     width: 80%;
 }
@@ -136,4 +136,4 @@
     font-size: 2em;
     font-weight: 800;
     color:#278161;
-}
+} */
