--- a/login.css
+++ b/login.css
@@ -78,7 +78,7 @@ body {
     justify-content: center;  
     align-items: flex-end;
     max-width: 400px;  
-    margin-right: 60px;
+    margin-left: 1000px;
 }
 
 .right .text h2 {
