--- a/home.css
+++ b/home.css
@@ -116,7 +116,7 @@ a:hover{
     background-clip: text;
     background-repeat: no-repeat;
     background-size: 0% 100%;
-    background-image: linear-gradient(90deg, #146cf6, rgb(9, 216, 9));
+    background-image: linear-gradient(90deg, rgb(255, 174, 0), rgb(255, 0, 0));
     animation: scroll-animation linear forwards;
     animation-timeline: view();
 }
@@ -164,6 +164,7 @@ a:hover{
     animation: fade-in linear forwards;
     animation-timeline: view();
     animation-range: 250px 500px;
+    margin-bottom: 10px;
 }
 
 @keyframes fade-in {
@@ -181,4 +182,8 @@ a:hover{
     width: 15vh;
     margin-right: 20px;
     border-radius: 15px;
+}
+
+.dropdown {
+    margin-top: 50px;
 }
