--- a/admin_home.css
+++ b/admin_home.css
@@ -11,6 +11,26 @@
     background-image: white;
   }
   
+  ::-webkit-scrollbar {
+    width: 1em;
+    height: 1em;
+    }
+
+::-webkit-scrollbar-track {
+    background: #1a1616;
+    }
+
+::-webkit-scrollbar-thumb {
+    background: #19503d;
+    border: 0.3em solid #1a1616;
+    border-radius: 100vw;
+    }
+
+::-webkit-scrollbar-thumb:hover {
+    background: #278161;
+    }
+
+
   body {
     background-color: #fef8f8;
   }
