--- a/public/css/home.css
+++ b/public/css/home.css
@@ -43,7 +43,7 @@ a:hover{
 .entire {
     height: 100vh;
     display: flex;
-    background: url(assets/home.jpg);
+    background: url(../assets/home.jpg);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
