--- a/public/css/login.css
+++ b/public/css/login.css
@@ -19,7 +19,7 @@ body {
 .entire {
     height: 100vh;
     display: flex;
-    background: url(assets/wrap-01.jpg);
+    background: url(../assets/wrap-01.jpg);
     background-position: center;
     background-size: cover;
     flex-direction: column;
