--- a/public/css/home.css
+++ b/public/css/home.css
@@ -43,7 +43,7 @@ a:hover{
 .entire {
     height: 100vh;
     display: flex;
-    background: url(../assets/home.jpg);
+    background: url(../assets/new_bg.jpg);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
@@ -52,7 +52,7 @@ a:hover{
 }
 
 .navbar {
-    background: #278161;
+    background: #241a08;
     display: flex;
     height: 50px;
     width: 100%;
@@ -90,6 +90,23 @@ a:hover{
     background: #1a1616;
     color: white;
     padding: 50px;
+}
+
+#image-track {
+    display: flex;
+    gap: 4vmin;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(0%, -50%); 
+    user-select: none; 
+}
+  
+#image-track > .image {
+    width: 40vmin;
+    height: 56vmin;
+    object-fit: cover;
+    object-position: 100% center;
 }
 
 .scroll-animation {
