--- a/public/css/add.css
+++ b/public/css/add.css
@@ -6,6 +6,11 @@
     background-image: white;
 }
 
+.hidden {
+    display: none;
+}
+
+
 ::-webkit-scrollbar {
     width: 1em;
     height: 1em;
@@ -25,9 +30,36 @@
     background: #278161;
 }
 
+.raleway-m {
+    font-family: "Raleway", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 900;
+    font-style: normal;
+}
+
+@keyframes fade-up {
+    0% {
+        opacity: 0;
+        transform: translateY(30px) scale(0.9);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px) scale(1);
+    }
+}
+
+.animate-fade-up {
+    animation: fade-up 0.5s ease forwards;
+}
+
 
 body {
     background-color: #fef8f8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
 }
 
 .navbar {
@@ -40,7 +72,6 @@ body {
     z-index: 10;
     position: fixed;
     top: 0;
-
 }
 
 .navbar ul {
@@ -72,7 +103,108 @@ body {
 
 
 .recipe-form-box {
-
-    padding: 20vh;
-    font-size: 20px;
+    flex: 0 1 auto;  
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;  
+    max-width: 450px;
+    margin: 0 auto;
+    border: 2px solid;
+    border-radius: 15px;
+    border-color: #278161;
+    background-color: white;
+    animation: none;
 }
+
+.recipe-form-box.animate-fade-up {
+    animation: fade-up 0.5s ease forwards;
+}
+
+.recipe-title {
+    text-align: center;
+    width: 100%;
+    padding-bottom: 50px;
+    padding-top: 20px;
+    color: #278161;
+}
+
+.recipe-title-2 {
+
+    text-align: center;
+    width: 100%;
+    padding-bottom: 50px;
+    padding-top: 20px;
+    color: #278161;
+}
+
+
+input[type="text"], textarea {
+    margin-right: 105px;
+    background: transparent;
+    border: none;
+    border-bottom: 2px solid rgba(128, 128, 128, 0.5);
+    padding: 10px;
+    padding-bottom: 6px;
+    width: 100%;
+    max-width: 420px;
+}
+
+input[type="text"]:hover, textarea:hover {
+    border-bottom: 2px solid rgba(39, 129, 97, 1);
+    transition: border-bottom 0.2;
+}
+
+input[type="text"]:focus, textarea:focus {
+    outline: none;
+    background: rgba(39, 129, 97, 0.1);
+    transition: background 0.2s;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+    border-bottom: 2px solid #278161;
+}
+
+
+input[type="file"] {
+
+    padding-top: 10px;
+}
+
+
+
+.input label,
+.input input,
+.input textarea {
+    margin-bottom: 25px;
+    
+}
+
+.button-container {
+
+    display: flex;
+    justify-content: center;
+}
+
+.next-button {
+    background: transparent;
+    border: 2px solid #278161;
+    color: #278161;
+    font-weight: 500;
+    padding: 10px;
+    border-radius: 15px;
+    cursor: pointer;
+    letter-spacing: 0.6px;
+    margin-top: 10px;
+    max-width: 100%;
+    width: 100px;
+}
+
+.next-button:hover {
+
+    margin-top: 10px;
+    background: rgba(39, 129, 97, 1);
+    border: 2px solid transparent;
+    color: white;
+    transition: background 0.2s;
+}
+
