--- a/public/css/home.css
+++ b/public/css/home.css
@@ -5,6 +5,10 @@
     font-family: Raleway, sans-serif;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 ::-webkit-scrollbar {
     width: 1em;
     height: 0;
