--- a/public/css/home.css
+++ b/public/css/home.css
@@ -91,7 +91,7 @@ a:hover{
     min-height: 160vh;
     justify-content: center;
     box-shadow: 0 0 90px rgba(0, 0, 0, 0.5);
-    background: #1a1616;
+    background: #0a0a06;
     color: white;
     padding: 50px;
 }
