--- a/public/css/About_Us.css
+++ b/public/css/About_Us.css
@@ -17,23 +17,35 @@ header {
     z-index: 1000;
 }
 
-nav ul {
+.navbar {
+    background: #241a08;
+    display: flex;
+    height: 50px;
+    width: 100%;
+    align-items: center;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
+    z-index: 10;
+    position: fixed;
+}
+
+.navbar ul {
     list-style: none;
-    padding: 0;
-    text-align: left;
-    margin: 0;
+    display: flex;
 }
 
-nav ul li {
-    display: inline;
-    margin: 0 15px;
+.navbar ul li {
+    padding-right: 20px;
 }
 
-nav ul li a {
-    color: #fff;
+.navbar ul li a {
+    color: white;
+    font-weight:400;
     text-decoration: none;
-    font-size: 1.2rem;
+    display: block;
+    justify-content: center;
+    align-items: center;
 }
+
 
 main {
     padding: 100px 2rem 2rem 2rem;
