--- a/public/css/home.css
+++ b/public/css/home.css
@@ -143,7 +143,7 @@ a:hover{
     background-clip: text;
     background-repeat: no-repeat;
     background-size: 0% 100%;
-    background-image: linear-gradient(90deg, rgb(255, 174, 0), rgb(255, 0, 0));
+    background-image: linear-gradient(90deg, #ffae00, rgb(255, 0, 0));
     animation: scroll-animation linear forwards;
     animation-timeline: view();
 }
@@ -167,7 +167,7 @@ a:hover{
 
 
 .recipe-list {
-    margin-top: 150px;
+    margin-top: 100px;
     display: flex;
     flex-direction: column;
 }
@@ -213,4 +213,54 @@ a:hover{
 
 .dropdown {
     margin-top: 50px;
+}
+
+.search-bar {
+    flex: 0 1 auto;
+    padding-top: 100px;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    
+}
+
+input {
+    position: absolute;
+    border: none;
+    width: 100%;
+    max-width: 1200px;
+    border-radius: 5px;
+    height: 50px;
+    color: white;
+    background: linear-gradient(0.25turn, #eae5dd, #ecf3be, #f69d3c);
+    padding-left: 50px;
+    margin: 0;
+    font-size: 17.5px;
+    transition: background 5s ease-in-out;
+}
+
+.searchImg {
+
+    position: absolute;
+    padding-top: 10px;
+    left: 35px;
+    height: 40px;
+    margin: 0;
+}
+
+
+input:hover {
+    border-bottom: 2px solid #591003;
+    transition: border-bottom 0.2s;
+}
+
+
+input:focus {
+    outline: none;
+    background: linear-gradient(0.25turn, #e3452d, #965123, #6d0404);
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+    border-bottom: 2px solid #591003;
+    transition: background 5s ease-in-out;
+
 }
