--- a/public/css/home.css
+++ b/public/css/home.css
@@ -236,7 +236,7 @@ input {
     padding-left: 50px;
     margin: 0;
     font-size: 17.5px;
-    transition: background 5s ease-in-out;
+    transition: background 0.5s ease-in-out;
 }
 
 .searchImg {
@@ -250,7 +250,7 @@ input {
 
 
 input:hover {
-    border-bottom: 2px solid #591003;
+    border-bottom: 2px solid #af6209;
     transition: border-bottom 0.2s;
 }
 
@@ -261,6 +261,5 @@ input:focus {
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
     border-bottom: 2px solid #591003;
-    transition: background 5s ease-in-out;
 
 }
