--- a/public/css/home.css
+++ b/public/css/home.css
@@ -68,6 +68,13 @@ a:hover{
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
     z-index: 10;
     position: fixed;
+    padding: 0 20px; 
+}
+
+.navbar  > img {
+    width: auto;
+    height: 50%;
+    margin-left: 35%;
 }
 
 .navbar ul {
