--- a/public/css/home.css
+++ b/public/css/home.css
@@ -62,37 +62,40 @@ a:hover{
 .navbar {
     background: #241a08;
     display: flex;
-    height: 50px;
+    height: 7.5vh;
     width: 100%;
     align-items: center;
-    box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 3vh rgba(0, 0, 0, 0.5);
     z-index: 10;
     position: fixed;
-    padding: 0 20px; 
+    padding: 0 2vh;
 }
 
-.navbar  > img {
+.navbar > img {
     width: auto;
     height: 50%;
-    margin-left: 35%;
+    margin: 0 auto;
+    padding-right: 20vh;
+    position: relative;
 }
 
 .navbar ul {
     list-style: none;
     display: flex;
-    margin-left: 30px;
+    margin-left: 3vh; 
 }
 
 .navbar ul li {
-    padding-right: 20px;
+    padding-right: 2vh;
 }
 
 .navbar ul li a {
     color: white;
-    font-weight:400;
+    font-weight: 400;
     text-decoration: none;
     display: block;
     justify-content: center;
+    font-size: 2vh;
     align-items: center;
 }
 
