--- a/public/css/About_Us.css
+++ b/public/css/About_Us.css
@@ -6,6 +6,24 @@ body {
     background-color: #1a1a1a;
     color: #fff;
 }
+::-webkit-scrollbar {
+    width: 1em;
+    height: 0;
+}
+
+::-webkit-scrollbar-track {
+    background: #1a1616;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #19503d;
+    border: 0.3em solid #1a1616;
+    border-radius: 100vw;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #278161;
+}
 
 header {
     background-color: #333;
